[gd_scene load_steps=11 format=2]

[ext_resource path="res://Minijuegos/Lanchas/etc/secret_gui.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/pirate.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/button_click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/coins.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 230, 40 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="SecretGUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BackShadow" type="ColorRect" parent="."]
visible = false
margin_left = -1446.0
margin_top = -1995.0
margin_right = 2204.0
margin_bottom = 3117.0
focus_previous = NodePath("../Popup")
color = Color( 0.172549, 0.054902, 0.054902, 0.423529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpSecret" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopUpSecret"]
margin_left = 3.0
margin_right = 568.0
margin_bottom = 568.0
color = Color( 0.239216, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="PopUpSecret"]
margin_right = 570.0
margin_bottom = 94.0
color = Color( 0.8, 0.72549, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PopUpSecret"]
margin_left = 34.5874
margin_top = 22.4167
margin_right = 687.588
margin_bottom = 103.416
custom_fonts/font = ExtResource( 2 )
text = "Felicitaciones!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PopUpSecret"]
margin_left = 56.4808
margin_top = 110.805
margin_right = 531.481
margin_bottom = 287.805
custom_fonts/font = ExtResource( 2 )
text = "Encontraste una pintura Secreta 1/4
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="PopUpSecret"]
margin_left = 300.0
margin_top = 210.0
margin_right = 537.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
text = "Cabeza de Pescador
Autor: Cleto Ciocchini
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pintura" type="TextureRect" parent="PopUpSecret"]
margin_left = 85.3098
margin_top = 206.909
margin_right = 277.31
margin_bottom = 438.909
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOK3" type="TouchScreenButton" parent="PopUpSecret"]
position = Vector2( 289.496, 495.183 )
normal = SubResource( 2 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="PopUpSecret/ButtonOK3"]
margin_left = -229.699
margin_top = -39.6628
margin_right = 230.301
margin_bottom = 40.3372
color = Color( 0.8, 0.72549, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PopUpSecret/ButtonOK3"]
margin_left = -64.1625
margin_top = -26.1892
margin_right = 59.8375
margin_bottom = 54.8108
custom_fonts/font = SubResource( 4 )
text = "Okey"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="focus_exited" from="PopUpSecret" to="." method="_on_Popup_focus_exited"]
[connection signal="pressed" from="PopUpSecret/ButtonOK3" to="." method="_on_ButtonOK2_pressed"]
